hphp/hack/test/typecheck/shape_remove_key4.php.exp
File "shape_remove_key4.php", line 13, characters 21-26:
Properties cannot be passed by reference (NastCheck[3079])
